--- a/camps.css
+++ b/camps.css
@@ -473,7 +473,7 @@ input,select{
     }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px){
     #container {
         max-width: 1200px;
         margin: 0 auto;
